securitygroup.tf
resource "aws_security_group" "allow_tls" {
  name        = "terraform-project"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.terraform-project.id

    ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    process = "allow_tls"
    name = "Terraform-Project"
  }
}
